<resources>
    <string name="app_name">Piniti Service Pro</string>
    <string name="service">Service</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="spinner_division">Select Division</string>
    <string name="spinner_districts">Select Districts</string>
    <string name="spinner_subdistricts">Select Sub-Districts</string>
    <string name="we_provide_over_100_services_at_your_doorstep">We provide over 100+ services \nat your doorstep</string>
    <string name="_1_million_happy_customers">1 Million+ \nHappy Customers</string>
    <string name="_1000_trusted_service_professionals">1000+ Trusted \nService Professionals</string>
    <string name="we_have_send_6_digit_code_on_91_862734223">We have send 6 digit code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beauty_amp_spa"><![CDATA[Beauty & Spa]]></string>
    <string name="_15"><strike>$15</strike></string>
    <string name="_30"><strike>$30</strike></string>

    <string name="material_calendar_monday">MO</string>
    <string name="material_calendar_tuesday">TU</string>
    <string name="material_calendar_wednesday">WE</string>
    <string name="material_calendar_thursday">TH</string>
    <string name="material_calendar_friday">FR</string>
    <string name="material_calendar_saturday">SA</string>
    <string name="material_calendar_sunday">SU</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_get_location">Map</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="firebase_path">location</string>

    <string name="action_settings">Settings</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="service_in">Service in</string>
    <string name="no_service_provider_added">No Service Provider Added</string>
    <string name="add_your_favorite">Add your favorite pros and hire them when you needed right from here</string>
    <string name="account_type">Account Type</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service Provider</string>
    <string name="search_hint">Service Location</string>
    <string name="second_desc">2.1 In order to use the SDK, you must first agree to the License Agreement. You may not use the SDK if you do not accept the License Agreement.

\n2.2 By clicking to accept, you hereby agree to the terms of the License Agreement.

\n2.3 You may not use the SDK and may not accept the License Agreement if you are a person barred from receiving the SDK under the laws of the United States or other countries, including the country in which you are resident or from which you use the SDK.

\n2.4 If you are agreeing to be bound by the License Agreement on behalf of your employer or other entity, you represent and warrant that you have full legal authority to bind your employer or such entity to the License Agreement. If you do not have the requisite authority, you may not accept the License Agreement or use the SDK on behalf of your employer or other entity.</string>
    <string name="intro_desc">1.1 The Android Software Development Kit (referred to in the License Agreement as the "SDK" and specifically including the Android system files, packaged APIs, and Google APIs add-ons) is licensed to you subject to the terms of the License Agreement. The License Agreement forms a legally binding contract between you and Google in relation to your use of the SDK.

\n1.2 "Android" means the Android software stack for devices, as made available under the Android Open Source Project, which is located at the following URL: http://source.android.com/, as updated from time to time.

\n1.3 A "compatible implementation" means any Android device that (i) complies with the Android Compatibility Definition document, which can be found at the Android compatibility website (http://source.android.com/compatibility) and which may be updated from time to time; and (ii) successfully passes the Android Compatibility Test Suite (CTS).

\n1.4 "Google" means Google LLC, a Delaware corporation with principal place of business at 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States.</string>
</resources>
