<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserInformations.UserAddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_add_details" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingTop="26.7dp"
                    android:paddingBottom="26.7dp"
                    android:text="Your Address"
                    android:textColor="@color/walkthrough_txt"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view_line" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.7dp"
                    android:layout_marginTop="17.3dp"
                    android:layout_marginRight="16.7dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Divisions"
                        android:textColor="@color/walkthrough_txt"
                        android:textSize="11.7sp" />

                    <Spinner
                        android:id="@+id/divisions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_regular"
                        android:prompt="@string/spinner_division"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp"/>

                    <!--<EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_address_rect"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="Enter Division Name"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Districts"
                        android:textColor="@color/walkthrough_txt"
                        android:textSize="11.7sp" />

                    <Spinner
                        android:id="@+id/districts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_regular"
                        android:prompt="@string/spinner_districts"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp"/>
                    <!--<EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_address_rect"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="Enter Zilla"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Sub-Districts"
                        android:textColor="@color/walkthrough_txt"
                        android:textSize="11.7sp" />

                    <Spinner
                        android:id="@+id/sub_districts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_regular"
                        android:prompt="@string/spinner_subdistricts"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp"/>
                    <!--<EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_address_rect"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="Enter Upozilla"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@color/walkthrough_txt"
                        android:textColorHint="#8f909e"
                        android:textSize="15sp" />-->
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.7dp"
                    android:layout_marginTop="16.7dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Address Type"
                    android:textColor="@color/walkthrough_txt"
                    android:textSize="15sp" />


                <RadioGroup
                    android:id="@+id/radio_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.7dp"
                    android:layout_marginTop="17dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:checked="true"
                        android:text="Home"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/radio_office"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Office"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/radio_othersa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Other"
                        android:theme="@style/MyRadioButton" />
                </RadioGroup>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/bottom_linear"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:id="@+id/bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/address_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:padding="15dp"
            android:text="Previous"
            android:textColor="@color/txt_color"
            android:visibility="visible" />

        <TextView
            android:id="@+id/address_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="30dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="right"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="Next"
            android:textColor="@color/txt_color" />
    </LinearLayout>

</RelativeLayout>